--- a/keepassxc-browser/options/shortcuts.html
+++ b/keepassxc-browser/options/shortcuts.html
@@ -24,19 +24,19 @@
       <hr />
       <div class="conf-content">
         <div id="conf-row">
-          <div><span data-i18n="contextMenuFillUsernameAndPassword"></span></div>
+          <div><label for="fill-username-password" data-i18n="contextMenuFillUsernameAndPassword"></label></div>
           <input type="text" id="fill-username-password"/>
           <button class="btn btn-sm btn-primary" id="buttonSaveUserandPass" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"/></button>
           <button class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-remove-sign"></span> <span data-i18n="optionsButtonReset"></span></button>
         </div>
         <div id="conf-row">
-          <div><span data-i18n="contextMenuFillPassword"></span></div>
+          <div><label for=""fill-password" data-i18n="contextMenuFillPassword"></label></div>
           <input type="text" id="fill-password"/>
           <button class="btn btn-sm btn-primary" id="buttonSavePass" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"/></button>
           <button class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-remove-sign"></span> <span data-i18n="optionsButtonReset"></span></button>
         </div>
         <div id="conf-row">
-          <div><span data-i18n="contextMenuFillTOTP"></span></div>
+          <div><label for="fill-totp" data-i18n="contextMenuFillTOTP"></label></div>
           <input type="text" id="fill-totp"/>
           <button class="btn btn-sm btn-primary" id="buttonSaveTotp" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"/></button>
           <button class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-remove-sign"></span> <span data-i18n="optionsButtonReset"></span></button>
