--- a/keepassxc-browser/options/options.html
+++ b/keepassxc-browser/options/options.html
@@ -5,23 +5,24 @@
       <meta charset="UTF-8">
       <link rel="stylesheet" href="bootstrap.min.css" />
       <link rel="stylesheet" href="options.css" />
-      <script type="text/javascript" src="../browser-polyfill.min.js"></script>
-      <script type="text/javascript" src="../global.js"></script>
-      <script type="text/javascript" src="../jquery-3.3.1.min.js"></script>
-      <script type="text/javascript" src="bootstrap.min.js"></script>
-      <script type="text/javascript" src="options.js"></script>
+      <script src="../browser-polyfill.min.js"></script>
+      <script src="../global.js"></script>
+      <script src="../jquery-3.3.1.min.js"></script>
+      <script src="bootstrap.min.js"></script>
+      <script src="options.js"></script>
+      <script src="../translate.js" defer></script>
   </head>
   <body>
     <div class="container">
-      <h3 class="muted"><img src="/icons/keepassxc_48x48.png" alt="logo" /> KeePassXC-Browser</h3>
+      <h3 class="muted"><img src="/icons/keepassxc_48x48.png" alt="logo"> KeePassXC-Browser</h3>
 
       <nav class="navbar navbar-default">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#general-settings"><span data-i18n="optionsMenuGeneral"/></a></li>
-          <li><a href="#connected-databases"><span data-i18n="optionsMenuConnectedDatabases"/></a></li>
-          <li><a href="#custom-fields"><span data-i18n="optionsMenuCustomFields"/></a></li>
-          <li><a href="#site-preferences"><span data-i18n="optionsMenuSitePreferences"></a></li>
-          <li><a href="#about"><span data-i18n="optionsMenuAbout"/></a></li>
+          <li class="active"><a href="#general-settings" tabindex="1"><span data-i18n="optionsMenuGeneral"></span></a></li>
+          <li><a href="#connected-databases" tabindex="2"><span data-i18n="optionsMenuConnectedDatabases"></span></a></li>
+          <li><a href="#custom-fields" tabindex="3"><span data-i18n="optionsMenuCustomFields"></span></a></li>
+          <li><a href="#site-preferences" tabindex="4"><span data-i18n="optionsMenuSitePreferences"></span></a></li>
+          <li><a href="#about" tabindex="5"><span data-i18n="optionsMenuAbout"></span></a></li>
         </ul>
       </nav>
 
@@ -35,14 +36,14 @@
           <span data-i18n="contextMenuFillPassword"></span>: <span id="fill-password-shortcut">error</span><br />
           <span data-i18n="contextMenuFillTOTP"></span>: <span id="fill-totp-shortcut">error</span>
         </p>
-        <p id="chrome-only"><button class="btn btn-sm btn-primary" id="configureCommands" type="button"><span class="glyphicon glyphicon-cog"></span><span data-i18n="optionsConfigureShortcuts"/></button></p>
+        <p id="chrome-only"><button class="btn btn-sm btn-primary" id="configureCommands" type="button" data-i18n="[title]openNewTab"><span class="glyphicon glyphicon-cog"></span><span data-i18n="optionsConfigureShortcuts"></span></button></p>
         <p>
           <div class="form-group">
             <label for="blinkTimeout" data-i18n="optionsLabelBlinkTime"></label>
             <div class="control-group">
               <div class="input-append">
                 <input type="number" id="blinkTimeout" placeholder="7500" value="7500" min="-1"/>
-                <button class="btn btn-sm btn-primary" id="blinkTimeoutButton" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"/></button>
+                <button class="btn btn-sm btn-primary" id="blinkTimeoutButton" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"></span></button>
               </div>
             </div>
             <span class="help-inline">
@@ -58,7 +59,7 @@
             <div class="control-group">
               <div class="input-append">
                 <input type="number" id="blinkMinTimeout" placeholder="2000" value="2000" min="-1"/>
-                <button class="btn btn-sm btn-primary" id="blinkMinTimeoutButton" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"/></button>
+                <button class="btn btn-sm btn-primary" id="blinkMinTimeoutButton" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"></span></button>
               </div>
             </div>
             <span class="help-inline">
@@ -76,7 +77,7 @@
             <div class="control-group">
               <div class="input-append">
                 <input type="number" id="allowedRedirect" placeholder="1" value="1" min="1"/>
-                <button class="btn btn-sm btn-primary" id="allowedRedirectButton" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"/></button>
+                <button class="btn btn-sm btn-primary" id="allowedRedirectButton" type="button"><span class="glyphicon glyphicon-floppy-disk"></span> <span data-i18n="optionsButtonSave"></span></button>
               </div>
             </div>
             <span class="help-inline">
@@ -90,7 +91,7 @@
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="usePasswordGenerator" value="true"/><span data-i18n="optionsCheckboxUsePasswordGenerator"/>
+              <input type="checkbox" name="usePasswordGenerator" value="true"/><span data-i18n="optionsCheckboxUsePasswordGenerator"></span>
             </label>
             <span class="help-block">
               <span data-i18n="optionsUsePasswordGeneratorHelpText"></span>
@@ -102,7 +103,7 @@
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="autoRetrieveCredentials" value="true" /><span data-i18n="optionsCheckboxAutoRetrieveCredentials"/>
+              <input type="checkbox" name="autoRetrieveCredentials" value="true" /><span data-i18n="optionsCheckboxAutoRetrieveCredentials"></span>
             </label>
             <span class="help-block" data-i18n="optionsAutoRetrieveCredentialsHelpText"></span>
           </div>
@@ -111,7 +112,7 @@
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="autoFillSingleEntry" value="false" /><span data-i18n="optionsCheckboxAutoFillSingleEntry"/>
+              <input type="checkbox" name="autoFillSingleEntry" value="false" /><span data-i18n="optionsCheckboxAutoFillSingleEntry"></span>
             </label>
             <span class="help-block" data-i18n="optionsAutoFillSingleEntryHelpText"></span>
             <span class="bg-danger" data-i18n="optionsAutoFillSingleEntryWarning"></span>
@@ -121,7 +122,7 @@
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="autoCompleteUsernames" value="true" /><span data-i18n="optionsCheckboxAutoCompleteUsernames"/>
+              <input type="checkbox" name="autoCompleteUsernames" value="true" /><span data-i18n="optionsCheckboxAutoCompleteUsernames"></span>
             </label>
             <span class="help-block" data-i18n="optionsAutocompleteUsernamesHelpText"></span>
           </div>
@@ -130,13 +131,13 @@
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="showNotifications" value="true" /><span data-i18n="optionsCheckboxShowNotifications"/>
+              <input type="checkbox" name="showNotifications" value="true" /><span data-i18n="optionsCheckboxShowNotifications"></span>
             </label>
             <span class="help-block" data-i18n="optionsShowNotificationsHelpText"></span>
           </div>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="showLoginNotifications" value="true" /><span data-i18n="optionsCheckboxShowLoginNotifications"/>
+              <input type="checkbox" name="showLoginNotifications" value="true" /><span data-i18n="optionsCheckboxShowLoginNotifications"></span>
             </label>
           </div>
         </p>
@@ -144,7 +145,7 @@
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="saveDomainOnly" value="true" /><span data-i18n="optionsSaveDomainOnly"/>
+              <input type="checkbox" name="saveDomainOnly" value="true" /><span data-i18n="optionsSaveDomainOnly"></span>
             </label>
             <span class="help-block" data-i18n="optionsSaveDomainOnlyHelpText"></span>
           </div>
@@ -152,10 +153,10 @@
         <hr />
         <p>
           <div data-i18n="optionsRadioText"></div>
-          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="3" checked="true"/><span data-i18n="optionsRadioThreeDays"/></label>
-          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="7" /><span data-i18n="optionsRadioWeek"/></label>
-          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="30" /><span data-i18n="optionsRadioMonth"/></label>
-          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="0" /><span data-i18n="optionsRadioNever"/></label>
+          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="3" checked><span data-i18n="optionsRadioThreeDays"></span></label>
+          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="7" /><span data-i18n="optionsRadioWeek"></span></label>
+          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="30" /><span data-i18n="optionsRadioMonth"></span></label>
+          <label class="radio-inline"><input type="radio" name="checkUpdateKeePassXC" value="0" /><span data-i18n="optionsRadioNever"></span></label>
         </p>
         <div class="help-block kphVersion">
           <span data-i18n="optionsVersionInfoText"></span>
@@ -168,14 +169,14 @@
           </div>
           <div>
             <span data-i18n="optionsLatestVersion" i18n-placeholder="<em class='latestVersion'></em>"></span>
-            <button class="btn btn-sm btn-primary checkUpdateKeePassXC"><span class="glyphicon glyphicon-refresh"></span> <span data-i18n="optionsButtonUpdate"/></button>
+            <button class="btn btn-sm btn-primary checkUpdateKeePassXC"><span class="glyphicon glyphicon-refresh"></span> <span data-i18n="optionsButtonUpdate"></span></button>
           </div>
         </div>
         <hr />
         <p>
           <div class="checkbox">
             <label class="checkbox">
-              <input type="checkbox" name="autoFillAndSend" value="0" /><span data-i18n="optionsCheckboxAutoFillAndSend"/>
+              <input type="checkbox" name="autoFillAndSend" value="0" /><span data-i18n="optionsCheckboxAutoFillAndSend"></span>
             </label>
             <span class="help-block">
               <span data-i18n="optionsAutoFillAndSendHelpText"></span>
@@ -183,7 +184,8 @@
               <span data-i18n="optionsAutoFillAndSendHelpTextSecond"></span>
             </span>
           </div>
-        <img src="/options/http-auth-dialog.png" alt="http-auth-dialog" />
+        <!--<img src="/options/http-auth-dialog.png" alt="http-auth-dialog" />-->
+        <img src="/options/http-auth-dialog.png" data-i18n="[alt]httpAuthDialog"/>
         </p>
       </div>
 
@@ -191,15 +193,15 @@
       <div class="tab" id="tab-connected-databases">
         <h2 data-i18n="optionsConnectedDatabasesTab"></h2>
         <hr />
-        <p data-i18n="optionsConnectedDatabasesText"/>
         <table class="table table-striped table-bordered table-hover">
+          <caption data-i18n="optionsConnectedDatabasesText"></caption>
           <thead>
             <tr>
-              <th><span data-i18n="optionsDatabaseIdentifier"></span></th>
-              <th><span data-i18n="optionsDatabaseKey"></span></th>
-              <th><span data-i18n="optionsDatabaseLastUsed"></span></th>
-              <th><span data-i18n="optionsDatabaseCreated"></span></th>
-              <th><span data-i18n="optionsDatabaseDelete"></span></th>
+              <th scope="col"><span data-i18n="optionsDatabaseIdentifier"></span></th>
+              <th scope="col"><span data-i18n="optionsDatabaseKey"></span></th>
+              <th scope="col"><span data-i18n="optionsDatabaseLastUsed"></span></th>
+              <th scope="col"><span data-i18n="optionsDatabaseCreated"></span></th>
+              <th scope="col"><span data-i18n="optionsDatabaseDelete"></span></th>
             </tr>
           </thead>
           <tbody>
@@ -248,14 +250,13 @@
           <span data-i18n="optionsCustomFieldsTabHelpTextFirst"></span>
           <br />
           <span data-i18n="optionsCustomFieldsTabHelpTextSecond"></span><em><span data-i18n="popupChooseCredentialsText"></span></em>.
-          <br />
-          <span data-i18n="optionsCustomFieldsTabHelpTextThird"></span>
         </p>
         <table class="table table-striped table-bordered table-hover">
+          <caption data-i18n="optionsCustomFieldsTableCaption"></caption>
           <thead>
             <tr>
-              <th><span data-i18n="optionsColumnPageURL"></span></th>
-              <th><span data-i18n="optionsColumnDelete"></span></th>
+              <th scope="col"><span data-i18n="optionsColumnPageURL"></span></th>
+              <th scope="col"><span data-i18n="optionsColumnDelete"></span></th>
             </tr>
           </thead>
           <tbody>
@@ -313,12 +314,13 @@
         </div>
         <hr />
         <table class="table table-striped table-bordered table-hover">
+          <caption data-i18n="optionsSitePreferencesTableCaption"></caption>
           <thead>
             <tr>
-              <th><span data-i18n="optionsColumnPageURL"></span></th>
-              <th><span data-i18n="optionsColumnIgnore"></span></th>
-              <th><span data-i18n="optionsColumnUsernameOnly"></span></th>
-              <th><span data-i18n="optionsColumnDelete"></span></th>
+              <th scope="col"><span data-i18n="optionsColumnPageURL"></span></th>
+              <th scope="col"><span data-i18n="optionsColumnIgnore"></span></th>
+              <th scope="col"><span data-i18n="optionsColumnUsernameOnly"></span></th>
+              <th scope="col"><span data-i18n="optionsColumnDelete"></span></th>
             </tr>
           </thead>
           <tbody>
@@ -328,13 +330,13 @@
             <tr class="clone">
               <td></td>
               <td>
-                <select name="ignore">
+                <select name="ignore" data-i18n="[title]optionsSitePreferencesSelect">
                   <option value="ignoreNothing" data-i18n="optionsSelectionNothing"></option>
                   <option value="ignoreNormal" data-i18n="optionsSelectionNormal"></option>
                   <option value="ignoreFull" data-i18n="optionsSelectionFull"></option>
                 </select>
               </td>
-              <td><input type="checkbox" name="usernameOnly" value="false" /></td>
+              <td><input type="checkbox" name="usernameOnly" value="false" data-i18n="[title]optionsColumnUsernameOnly"/></td>
               <td><button class="btn delete btn-danger btn"><span class="glyphicon glyphicon-remove-sign"></span> <span data-i18n="optionsButtonRemove"></span></button></td>
             </tr>
           </tbody>
@@ -364,13 +366,13 @@
         <h2 data-i18n="optionsAboutTab"></h2>
         <hr />
         <p>
-          <a target="_blank" href="https://chrome.google.com/webstore/detail/keepassxc-browser/oboonakemofpalcgghocfoadofidjkkk"><span data-i18n="optionsAboutChrome"/></a>
+          <a target="_blank" href="https://chrome.google.com/webstore/detail/keepassxc-browser/oboonakemofpalcgghocfoadofidjkkk" data-i18n="[title]openNewTab" tabindex="6"><span data-i18n="optionsAboutChrome"></span></a>
         </p>
         <p>
-          <a target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/keepassxc-browser/"><span data-i18n="optionsAboutMozilla"/></a>
+          <a target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/keepassxc-browser/" data-i18n="[title]openNewTab" tabindex="7"><span data-i18n="optionsAboutMozilla"></span></a>
         </p>
         <p>
-          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser"><span data-i18n="optionsAboutGitHub"/></a>.
+          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser" data-i18n="[title]openNewTab" tabindex="8"><span data-i18n="optionsAboutGitHub"></span></a>.
         </p>
         <hr />
         <p>
@@ -382,9 +384,11 @@
         <hr />
         <p>
           <span data-i18n="optionsAboutContributors"></span><br>
-          <a target="_blank" href="https://github.com/pfn/">Perry Nguyen</a>, <a target="_blank" href="http://lukas-schulze.de">Lukas Schulze</a>,
-          <a target="_blank" href="https://github.com/smorks">Andy Brandt</a>, <a target="_blank" href="https://github.com/varjolintu/">Sami Vänttinen</a>,
-          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser">KeePassXC Team</a>.
+          <a target="_blank" href="https://github.com/pfn/" data-i18n="[title]openNewTab" tabindex="9">Perry Nguyen</a>, 
+          <a target="_blank" href="http://lukas-schulze.de" data-i18n="[title]openNewTab" tabindex="10">Lukas Schulze</a>,
+          <a target="_blank" href="https://github.com/smorks" data-i18n="[title]openNewTab" tabindex="11">Andy Brandt</a>, 
+          <a target="_blank" href="https://github.com/varjolintu/" data-i18n="[title]openNewTab" tabindex="12">Sami Vänttinen</a>,
+          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser" data-i18n="[title]openNewTab" tabindex="13">KeePassXC Team</a>.
         </p>
         <hr />
         <p>
@@ -551,7 +555,5 @@
         <p>(C) 2017-2018 - KeePassXC Team</p>
       </div>
     </div> <!-- /container -->
-
-    <script type="text/javascript" src="../translate.js"></script>
   </body>
 </html>
