--- a/keepassxc-browser/options/options.html
+++ b/keepassxc-browser/options/options.html
@@ -372,7 +372,7 @@
           <a target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/keepassxc-browser/" data-i18n="[title]openNewTab" tabindex="7"><span data-i18n="optionsAboutMozilla"></span></a>
         </p>
         <p>
-          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser" data-i18n="[title]openNewTab" tabindex="8"><span data-i18n="optionsAboutGitHub"></span></a>.
+          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser" data-i18n="[title]openNewTab" tabindex="8"><span data-i18n="optionsAboutGitHub"></span></a>
         </p>
         <hr />
         <p>
@@ -383,7 +383,7 @@
         </p>
         <hr />
         <p>
-          <span data-i18n="optionsAboutContributors"></span><br>
+          <span data-i18n="optionsAboutContributors"></span>:<br>
           <a target="_blank" href="https://github.com/pfn/" data-i18n="[title]openNewTab" tabindex="9">Perry Nguyen</a>, 
           <a target="_blank" href="http://lukas-schulze.de" data-i18n="[title]openNewTab" tabindex="10">Lukas Schulze</a>,
           <a target="_blank" href="https://github.com/smorks" data-i18n="[title]openNewTab" tabindex="11">Andy Brandt</a>, 
@@ -392,7 +392,7 @@
         </p>
         <hr />
         <p>
-          <span data-i18n="optionsAboutLicenses"></span><br>
+          <span data-i18n="optionsAboutLicenses"></span>:<br>
 
           <details>
             <summary>Bootstrap</summary>
@@ -549,10 +549,21 @@
             </pre>
           </details>
         </p>
+        <hr />
+        <p>
+          <span data-i18n="optionsAboutReportBugs"></span>:<br>
+          <a target="_blank" href="https://github.com/keepassxreboot/keepassxc-browser/issues/new" tabindex="14"><span data-i18n="optionsAboutCreateNewIssue"></span></a>
+          <p><span data-i18n="optionsAboutDebugInfo"></span>:
+            <p>KeePassXC - <span class="kpxcVersion"></span>
+            <br>KeePassXC-Browser - <span class="kpxcbrVersion"></span>
+            <br>Operating system: <span class="kpxcbrOS"></span>
+            <br>Browser: <span class="kpxcbrBrowser"></span>
+          </p>
+        </p>
       </div>
       <hr>
       <div class="footer">
-        <p>(C) 2017-2018 - KeePassXC Team</p>
+        <p>(C) 2017-2019 - KeePassXC Team</p>
       </div>
     </div> <!-- /container -->
   </body>
